intel/bench_214/extr_.gitcompatmingw.c_xutftowcsn_with_main/log.txt
bench_214/extr_.gitcompatmingw.c_xutftowcsn_with_main/extr_.gitcompatmingw.c_xutftowcsn_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.gitcompatmingw.c_xutftowcsn_with_main/extr_.gitcompatmingw.c_xutftowcsn_with_main.c:13:15: error: cannot combine with previous 'char' declaration specifier
typedef  char wchar_t ;
              ^
bench_214/extr_.gitcompatmingw.c_xutftowcsn_with_main/extr_.gitcompatmingw.c_xutftowcsn_with_main.c:13:1: warning: typedef requires a name [-Wmissing-declarations]
typedef  char wchar_t ;
^~~~~~~~~~~~~~~~~~~~~
1 warning and 2 errors generated.
HLS FPGA Parse FAILED.
